# project-KnowingEye

./: .gitignore  README.md  REPOSITORY_GUIDE.md  master-doc-template.yaml  package-lock.json  start-dev.cmd  start-setup.cmd  stop-dev.cmd  test-all.cmd
backend/: .env  .env.example  .gitignore  db.sqlite3  generate_seed_csv.py  requirements-core.txt  requirements-cv.txt  requirements-prod.txt  requirements.txt  run-api.cmd  setup-venv.cmd
docs-new/: README.md  deploy.bat  (+3 more)
pipeline_playground/: .env.example  .gitignore  Knowing-Eye Group 1.docx  README.md  instructions.md  pyproject.toml  requirements-identity.txt  requirements.txt  start.cmd  start.ps1
pipeline_playground/api/: main.py
pipeline_playground/api/static/: index.html
pipeline_playground/config/: pipeline.yaml
pipeline_playground/docs/general/course_resources/: MINUTES OF TITLE DEFENSE.docx
pipeline_playground/knowing_eye/: __init__.py  config.py  pipeline.py  types.py
pipeline_playground/knowing_eye/behavior/: __init__.py  scoring.py  temporal.py
pipeline_playground/knowing_eye/detection/: __init__.py  face_detector.py  mp_models.py  pose_detector.py  yolo_detector.py
pipeline_playground/knowing_eye/preprocessing/: __init__.py  frame.py
pipeline_playground/knowing_eye/recognition/: __init__.py  identity.py
pipeline_playground/scripts/: analyze_image.py  prepare_dataset.py  run_webcam.py  train_yolo.py
pipeline_playground/tests/: test_identity.py  test_pipeline.py  test_temporal.py
pipeline_playground/training/: TRAINING.md
pipeline_playground/training/data/: dataset.yaml.example
(+565 files in other folders)
